<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Activity_Sign_In">

    <EditText
        android:id="@+id/signIn_EDT_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/signIn_EDT_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signIn_EDT_email"
        android:inputType="textPassword"
        android:layout_marginTop="80dp"
        android:hint="@string/password" />

    <Button
        android:id="@+id/signIn_BTN_signIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signIn_EDT_password"
        android:layout_marginTop="80dp"
        android:text="@string/sign_in" />

</RelativeLayout>