<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Activity_Result">

    <TextView
        android:id="@+id/result_LBL_dateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="22sp"
        android:text="@string/date" />

    <TextView
        android:id="@+id/result_LBL_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/result_LBL_dateText"
        android:layout_margin="10dp"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/result_LBL_resultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/result_LBL_date"
        android:layout_margin="10dp"
        android:textSize="22sp"
        android:text="@string/result" />

    <TextView
        android:id="@+id/result_LBL_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/result_LBL_date"
        android:layout_toEndOf="@+id/result_LBL_resultText"
        android:layout_margin="10dp"
        android:textSize="22sp" />

    <ImageView
        android:id="@+id/result_IMG_spiral"
        android:layout_width="512px"
        android:layout_height="512px"
        android:layout_centerInParent="true"
        android:layout_marginTop="80dp"
        android:layout_below="@+id/result_LBL_result" />

    <Button
        android:id="@+id/result_BTN_toMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:textSize="18sp"
        android:text="@string/to_menu" />

</RelativeLayout>